# Sheetlint

./: .env.example  .gitignore  CLAUDE.md  PROJECT_BREAKDOWN.md  README.md  app.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.streamlit/: config.toml  secrets.toml.example
context/: project-context.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/analysis/[jobId]/: layout.tsx  page.tsx
frontend/app/analysis/[jobId]/issues/: page.tsx
frontend/app/analysis/[jobId]/time-series/: page.tsx
frontend/app/configure/[previewId]/: page.tsx
frontend/components/: analysis-nav.tsx  brand.tsx  callout.tsx  configure-footer.tsx  crumbs.tsx  deductions.tsx  detector-picker.tsx  features-strip.tsx  finding-card.tsx  icons.tsx  issue-detail.tsx  job-status-banner.tsx  preview-strip.tsx  report-header.tsx  report-tabs.tsx  scanning-view.tsx  severity-badge.tsx  severity-kpis.tsx  sheet-picker.tsx  time-series-chart.tsx  top-bar.tsx  trust-score-card.tsx  ts-card.tsx  upload-zone.tsx
frontend/components/ui/: sonner.tsx
frontend/hooks/: use-create-preview.ts  use-job.ts  use-preview.ts  use-scan-log.ts  use-submit-analysis.ts
frontend/lib/: api.ts  csv.ts  env.ts  schemas.ts
pages/: ai_insights.py  issues.py  overview.py  schema.py  timeseries.py
samples/: generate_sample.py
sheetlint/: README.md
sheetlint/project/: Sheetlint.html  styles.css
sheetlint/project/src/: app.jsx  data.jsx  primitives.jsx  screen_configure.jsx  screen_report.jsx  screen_scanning.jsx  screen_upload.jsx  tweaks.jsx
src/excel_detector/: __init__.py  analyzer.py  scoring.py
src/excel_detector/detectors/: __init__.py  ai.py  base.py  duplicates.py  statistical.py  structural.py  timeseries.py
src/excel_detector/ui/: __init__.py  components.py  styles.py
src/sheetlint/: __init__.py  config.py  main.py
src/sheetlint/analysis/: __init__.py  dependencies.py  exceptions.py  parser.py  preview.py  router.py  schemas.py  scoring.py  service.py
src/sheetlint/analysis/detectors/: __init__.py  ai.py  base.py  duplicates.py  statistical.py  structural.py  timeseries.py
src/sheetlint/jobs/: __init__.py  dependencies.py  exceptions.py  router.py  schemas.py  service.py
tests/: conftest.py  test_analysis_flow.py
